# projekt-2-ToadTraveller

advent-of-code/1/: CMakeLists.txt  input_day1.csv  main.cpp
advent-of-code/10/: main  main.cpp
advent-of-code/11/: main  main copy  main copy.cpp  main.cpp
advent-of-code/2/: CMakeLists.txt  input_2.csv  input_2.txt  main.cpp
advent-of-code/3/: data_read.cpp  data_read.hpp  main.cpp
advent-of-code/3/version_2/: CMakeLists.txt  input3.txt  main.cpp
advent-of-code/4/: CMakeLists.txt  data_read.cpp  data_read.hpp  main.cpp
advent-of-code/5/: main  main.cpp
advent-of-code/6/: 6_with_ncurses.cpp  CMakeLists.txt  main  main.cpp  sfml_version.cpp
advent-of-code/7/: CMakeLists.txt  data_read.cpp  data_read.hpp  input.csv  input2.csv  main.cpp
advent-of-code/9/: CMakeLists.txt  data_read.cpp  data_read.hpp  main.cpp
